--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -11,7 +11,7 @@
               *ngFor="let product of products"
               [ngClass]="{'active': product?.id === selectedProduct?.id}"
               (click)="productSelected(product)">{{ product.productName }}
-        <ng-container *ngIf="displayCode">
+        <ng-container *ngIf="displayCode$ | async">
           ({{ product.productCode }})
         </ng-container>
       </button>
@@ -20,12 +20,12 @@
 
   <div class="card-footer">
     <div class="row">
-      <div class="form-check col-md-7">
+      <div class="form-check col-md-7" >
         <label>
           <input class="form-check-input"
                  type="checkbox"
                  (change)="checkChanged()"
-                 [checked]="displayCode">
+                 [checked]="displayCode$ | async">
           Display Product Code
         </label>
       </div>
