Add state mngmt for login - mask user name checkbox

--- a/src/app/user/login.component.html
+++ b/src/app/user/login.component.html
@@ -19,7 +19,7 @@
               <input class="form-control"
                      [ngClass]="{'is-invalid': (userNameVar.touched || userNameVar.dirty) && !userNameVar.valid }"
                      id="userNameId"
-                     [type]="maskUserName ? 'password' : 'text'"
+                     [type]="typeInput"
                      placeholder="User Name (required)"
                      required
                      ngModel
@@ -81,7 +81,7 @@
             <input class="form-check-input"
                    type="checkbox"
                    (change)="checkChanged()"
-                   [checked]="maskUserName">
+                   [checked]="maskUserName$ | async">
             Mask user name
           </label>
         </div>
