Use ngrx on other variables

--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -5,11 +5,11 @@
   </div>
 
   <div class="card-body"
-       *ngIf="products?.length">
+       *ngIf="products$ | async as products">
     <div class="list-group">
       <button class="list-group-item list-group-item-action rounded-0"
               *ngFor="let product of products"
-              [ngClass]="{'active': product?.id === selectedProduct?.id}"
+              [ngClass]="{'active': product?.id === (selectedProduct$ | async )?.id}"
               (click)="productSelected(product)">{{ product.productName }}
         <ng-container *ngIf="displayCode$ | async">
           ({{ product.productCode }})
