--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -5,13 +5,13 @@
   </div>
 
   <div class="card-body"
-       *ngIf="products$ | async as products">
+       *ngIf="products">
     <div class="list-group">
       <button class="list-group-item list-group-item-action rounded-0"
               *ngFor="let product of products"
-              [ngClass]="{'active': product?.id === (selectedProduct$ | async )?.id}"
+              [ngClass]="{'active': product?.id === selectedProduct?.id}"
               (click)="productSelected(product)">{{ product.productName }}
-        <ng-container *ngIf="displayCode$ | async">
+        <ng-container *ngIf="displayCode">
           ({{ product.productCode }})
         </ng-container>
       </button>
@@ -25,7 +25,7 @@
           <input class="form-check-input"
                  type="checkbox"
                  (change)="checkChanged()"
-                 [checked]="displayCode$ | async">
+                 [checked]="displayCode">
           Display Product Code
         </label>
       </div>
@@ -38,7 +38,7 @@
     </div>
   </div>
 </div>
-<div *ngIf="errorMessage$ | async as errorMessage"
+<div *ngIf="errorMessage"
      class="alert alert-danger">
   Error: {{ errorMessage }}
 </div>
